--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -60,6 +60,8 @@
                                 <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Filename}"/>
                                 <TextBlock Grid.Row="3" Grid.Column="0">Rotation:</TextBlock>
                                 <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Rotation}"/>
+                                <TextBlock Grid.Row="4" Grid.Column="0">Lane keeping status:</TextBlock>
+                                <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Rotation}"/>
                             </Grid>
                         </StackPanel>
                     </DataTemplate>
