--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -51,7 +51,7 @@
                                 Source="resm:AutomatedCar.Assets.steering-wheel.png?assembly=AutomatedCar"
                                 RenderTransformOrigin="{Binding RotationPoint, Converter={x:Static visualization:RenderTransformOriginTransformer.Instance}}">
                             </Image>
-                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
                                 <TextBlock Grid.Row="0" Grid.Column="0">X:</TextBlock>
                                 <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding X}"/>
                                 <TextBlock Grid.Row="1" Grid.Column="0">Y:</TextBlock>
@@ -62,6 +62,14 @@
                                 <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Rotation}"/>
                                 <TextBlock Grid.Row="4" Grid.Column="0">Inner Gear:</TextBlock>
                                 <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Gearbox.CurrentInternalGear}"/>
+                                <TextBlock Grid.Row="5" Grid.Column="0">ACC status (on/off):</TextBlock>
+                                <TextBlock Grid.Row="5" Grid.Column="1"/>
+                                <TextBlock Grid.Row="6" Grid.Column="0">ACC adjustable distance (sec):</TextBlock>
+                                <TextBlock Grid.Row="6" Grid.Column="1"/>
+                                <TextBlock Grid.Row="7" Grid.Column="0">ACC adjustable speed (km/h):</TextBlock>
+                                <TextBlock Grid.Row="7" Grid.Column="1"/>
+
+
                             </Grid>
                         </StackPanel>
                     </DataTemplate>
