Fix dashboard and rename ACC interface

--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -63,11 +63,11 @@
                                 <TextBlock Grid.Row="4" Grid.Column="0">Inner Gear:</TextBlock>
                                 <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Gearbox.CurrentInternalGear}"/>
                                 <TextBlock Grid.Row="5" Grid.Column="0">ACC status (on/off):</TextBlock>
-                                <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding DummyAcc.IsAccOn, Converter={x:Static visualization:BoolToStatusConverter.Instance}}"/>
+                                <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding Acc.IsAccOn, Converter={x:Static visualization:BoolToStatusConverter.Instance}}"/>
                                 <TextBlock Grid.Row="6" Grid.Column="0">ACC adjustable distance (sec):</TextBlock>
-                                <TextBlock Grid.Row="6" Grid.Column="1" Text="{Binding DummyAcc.AccDistance}"/>
+                                <TextBlock Grid.Row="6" Grid.Column="1" Text="{Binding Acc.AccDistance}"/>
                                 <TextBlock Grid.Row="7" Grid.Column="0">ACC adjustable speed (km/h):</TextBlock>
-                                <TextBlock Grid.Row="7" Grid.Column="1" Text="{Binding DummyAcc.AccSpeed}"/>
+                                <TextBlock Grid.Row="7" Grid.Column="1" Text="{Binding Acc.AccSpeed}"/>
 
 
                             </Grid>
